--- a/views/index.pug
+++ b/views/index.pug
@@ -42,8 +42,7 @@ html
           .scale-element.digits.project.dissabled(data-step='3')
             .digits-scale-button 
               ='zważ'
-            span#result-project.result 
-              ='0.00'
+            input#result-project.result(type='text' name='project-nr' value='0.00' size='8')
             span.units 
               ='kg'
 
